<?xml version="1.0"?>
<package format="2">
  <name>safety_monitor_process</name>
  <version>0.0.0</version>
  <description>The safety_monitor_process package</description>

  <maintainer email="cabrera.javier23@gmail.com">Javier Cabrera Marugan</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>robot_process</build_depend>
  <build_depend>droneMsgsROS</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>lib_cvgutils</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>aerostack_msgs</build_depend>
  <build_depend>behavior_execution_manager_msgs</build_depend>
  <build_depend>belief_manager_msgs</build_depend>

  <build_depend>pugixml</build_depend>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>robot_process</exec_depend>
  <exec_depend>droneMsgsROS</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>lib_cvgutils</exec_depend>	
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>aerostack_msgs</exec_depend>
  <exec_depend>behavior_execution_manager_msgs</exec_depend>
  <exec_depend>belief_manager_msgs</exec_depend>
  <exec_depend>pugixml</exec_depend>

  <export>

  </export>
</package>
